# pandas_pipeline_agent_flow_generator

./: .gitignore  README.md  main.py  pyproject.toml  setup_env.py
data/input_samples/: precos-glp-04.csv
src/agents/: approval_agent.py  code_generation_agent.py  code_quality_agent.py  data_ingestion_agent.py  refactoring_pipeline_agent.py  test_agent.py  transformation_planner_agent.py
src/core/: data_schema.py  llm_config.py  tavily_utils.py
src/utils/: advanced_rag_system.py  data_quality_checklist.py  hybrid_rag_system.py  interactive_data_patterns.py
