[project]
name = "pandas-pipeline-agent-flow-generator"
version = "0.1.0"
description = "AI-powered data pipeline generator using LangGraph agents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "langgraph>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "torch>=2.0.0",
    # Add others you may need
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pandas-pipeline-agent-flow-generator"
Repository = "https://github.com/yourusername/pandas-pipeline-agent-flow-generator"

[tool.setuptools.packages.find]
where = ["src"]
# This line tells setuptools to look for Python packages inside the 'src' directory.
